[project]
name = "comfyui-optical-flow"
description = "This package contains three nodes to help you compute optical flow between pairs of images, usually adjacent frames in a video, visualize the flow, and apply the flow to another image of the same dimensions. Most of the code is from Deforum, so this is released under the same license (MIT)."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/seanlynch/comfyui-optical-flow"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-optical-flow"
Icon = ""
